# dreamboard

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  database.db  deploy_backend.sh  main.py  openapi-run-template.yaml  pyproject.toml  requirements.txt
backend/app/: main.py  utils.py
backend/app/adk_web_agent/: agent.py
backend/app/api/: router.py
backend/app/api/admin/: agents_crud.py  scenarios_crud.py  subagent_links_crud.py  util.py
backend/app/api/endpoints/: agent_router.py  db_agent_router.py  file_uploader_routes.py  image_gen_routes.py  login_router.py  scenario_router.py  text_gen_routes.py  video_gen_routes.py
backend/app/core/: config.py
backend/app/dependencies/: database.py
backend/app/dreamboard/: pyvenv.cfg
backend/app/models/: request_models.py
backend/app/models/agent/: agent_interface.py  agent_model.py  enums.py  user_model.py
backend/app/models/image/: image_gen_models.py  image_request_models.py
backend/app/models/text/: text_gen_models.py  text_request_models.py
backend/app/models/video/: video_gen_models.py  video_request_models.py
backend/app/orm/: creative_agents.yaml  data_science_agents.py  root_agent.yaml  sample_data.py  scenario_data.yaml
backend/app/prompts/: image_prompt_library.py  text_prompts_library copy.py  text_prompts_library.py
backend/app/services/: gemini_service.py  response_schemas.py  storage_service.py
backend/app/tools/: bigquery_agent.py  bigquery_ml_agent.py  db_ds_multiagent.py  get_weather.py  image_tools.py  text_gen.py  video_gen.py
(+111 files in other folders)
