[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.11",
    "ffmpeg==1.4",
    "google-cloud-aiplatform==1.84.0",
    "google-cloud-logging==3.11.4",
    "google-genai>=1.5.0",
    "moviepy==1.0.3",
    "opencv-python-headless==4.11.0.86",
    "pydantic-settings==2.8.1",
    "python-dotenv>=1.1.0",
    "python-multipart==0.0.20",
    "scikit-image==0.25.2",
    "scipy==1.15.2",
    "uvicorn[standard]==0.34.0",
]
